Fix T40522: Viewport layer name is not redrawed.

Yet another missing redraw flag catching (only affecting Cycles, in this case).